docs/original_moodle/entregas/todas/1/Tarea 1 - Ejercicio 10  - Máquina Cafetera VPL/RODRIGUEZ ORDUZ OSCAR DIEGO 1891/2019-08-25-23-34-25.ceg/compilation.txt
MaquinaCafetera.java:207: error: reached end of file while parsing
    }
     ^
1 error
Not compiled
